// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-columns-field Renders \`c-columns-field\` with custom props 1`] = `
<c-card-iterator-form-stub
  handle=".column-drag-handle"
  iterator-class="[object Object]"
  value="[object Object],[object Object]"
/>
`;

exports[`c-columns-field Renders \`c-columns-field\` with default props 1`] = `
<c-card-iterator-form-stub
  handle=".column-drag-handle"
  iterator-class="[object Object]"
  value=""
/>
`;
